--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -53,3 +53,10 @@
     color: black;
     
 }
+
+.profile .btn_container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+}
