--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fafafa;
-  overflow: hidden;
+  overflow-x: hidden;
   background: url('./assets/images/texture.jpg');
   background-size: 100%;
   background-repeat: no-repeat;
