--- a/src/pages/Resume/Resume.css
+++ b/src/pages/Resume/Resume.css
@@ -6,3 +6,25 @@
     line-height: 22px;
     white-space: pre-line;
 }
+
+/* End about me section */
+
+/* Timeline Section */
+
+.resume_timeline .timeline_content .timeline_title {
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.resume_timeline .timeline_content .timeline_date {
+    color: darkslategray
+}
+
+.resume_timeline .timeline_content .timeline_description {
+    color: gray;
+    font-size: small;
+    margin-top: 6px;
+}
+
+
+/* End Timeline Section */
