--- a/src/App.css
+++ b/src/App.css
@@ -19,10 +19,17 @@
     padding: 30px !important;
 }
 
+.pt_45 {
+    padding-top: 45px !important;
+}
+
 .pb_45 {
     padding-bottom: 45px !important;
 }
 
+.p_50 {
+    padding: 50px !important;
+}
 
 
 @media (max-width: 991px) {
@@ -44,7 +51,6 @@
     -moz-border-radius: 6px;
     -webkit-border-radius: 6px;
     margin-bottom: 30px;
-    padding: 30px;
 }
 
 .section_title {
@@ -69,4 +75,13 @@
     left: 0;
     background-color: var(--main-color);
 
+}
+
+.section {
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.graybg {
+    background-color: #fafafa ;
 }
