--- a/src/pages/Resume/Resume.css
+++ b/src/pages/Resume/Resume.css
@@ -26,5 +26,67 @@
     margin-top: 6px;
 }
 
-
 /* End Timeline Section */
+
+/* Services Section */
+
+.service {
+    height: 100%;
+    text-align: center;
+}
+
+.service .service_title {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 35px;
+    text-align: center;
+}
+
+.service .service_description {
+    color: #989898;
+    border-color: var(--main-color);
+    margin-right: 5px;
+    text-align: center;
+}
+
+.service_icon > .MuiSvgIcon-root {
+    font-size: 46px;
+    margin-left: 0;
+    font-weight: 300;
+    color: darkslategray;
+}
+
+/* Services Section End */
+
+/* Skills */
+.skill {
+    border-radius: 12px !important;
+    padding: 20px;
+    box-shadow: 0px 0px 48px 0px rgba(4, 6, 4, 0.08) !important;
+    min-height: 186px;
+    height: 100%;
+}
+
+.skill .skill_title {
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 35px;
+}
+
+.skill .skill_description {
+    display: flex;
+    align-items: center;
+    color: #989898;
+    font-weight: 400;
+    line-height: 18px;
+
+}
+
+.skill .skill_description .timeline_dot {
+    border-color: var(--main-color);
+    padding: 2px;
+    margin-right: 5px;
+}
+
+
+/* End Skills */
