--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -55,3 +55,9 @@
 .header .header_left {
     margin-right: auto;
 }
+
+.container_shadow {
+    box-shadow: 0px 2px 92px 0px rgba(0, 0, 0, 0.13);
+    -webkit-box-shadow: 0px 2px 92px 0px rgba(0, 0, 0, 0.13);
+    -moz-box-shadow: 0px 2px 92px 0px rgba(0, 0, 0, 0.13);
+}
