--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,9 @@ body {
   background-size: 100%;
   background-repeat: no-repeat;
   background-size: inherit;
+  background-attachment: fixed;
+  opacity: 0.9;
+  
 }
 
 code {
