--- a/src/pages/Resume/Resume.css
+++ b/src/pages/Resume/Resume.css
@@ -88,5 +88,30 @@
     margin-right: 5px;
 }
 
-
 /* End Skills */
+
+/* Contact */
+.contactInfo_item {
+    font-size: 14px;
+    color: #787878;
+}
+
+.contactInfo_item > span {
+    color: black;
+    font-weight: 500;
+
+}
+
+.contactInfo_socialContainer {
+    margin-top: 15px;
+
+}
+
+.contactInfo_social > a > .MuiSvgIcon-root {
+    font-size: 16px;
+    margin-right: 10px;
+    color: black;
+
+}
+
+/* End of Contact */
